# imgVision

./: .gitignore  .nvmrc  .vercelignore  DEPLOYMENT_GUIDE.md  README.md  render.yaml  vercel.json
Backend/: main.py  pyproject.toml  requirements.txt
Frontend/: .env.example  package-lock.json  package.json  vercel.json
Frontend/public/: index.html
Frontend/src/: App.css  App.js
Reserch/: architecture_diagram.excalidraw  build.ipynb
